--- a/Global.Repository/Global.Repository.csproj
+++ b/Global.Repository/Global.Repository.csproj
@@ -73,10 +73,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="interface\ICustomerRepository.cs" />
+    <Compile Include="repositories\CustomerRepository.cs" />
     <Compile Include="models\Account.cs" />
+    <Compile Include="models\Customer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="repositories\AccountRepository.cs" />
-    <Compile Include="repositories\IAccountRepository.cs" />
+    <Compile Include="interface\IAccountRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
