--- a/Global/Global.csproj
+++ b/Global/Global.csproj
@@ -198,6 +198,9 @@
   <ItemGroup>
     <Content Include="Views\Customer\Index.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Customer\AddCustomer.cshtml" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
