--- a/Global/Web.config
+++ b/Global/Web.config
@@ -117,6 +117,7 @@
       <object id="QueryExecutor" type="BonaStoco.Inf.DataMapper.Impl.AdoQueryExecutor, BonaStoco.Inf.DataMapper.Impl" singleton="false" autowire="autodetect"/>
       <object id="ReportingRepository" type="BonaStoco.Inf.Reporting.PostgresReportingRepository, BonaStoco.Inf.Reporting" singleton="false" autowire="autodetect"/>
       <object id="AccountRepository" type="Global.Repository.AccountRepository, Global.Repository" singleton="false" autowire="autodetect" />
+      <object id="CustomerRepository" type="Global.Repository.CustomerRepository, Global.Repository" singleton="false" autowire="autodetect" />
     </objects>
   </spring>
 </configuration>
