--- a/Global/Web.config
+++ b/Global/Web.config
@@ -118,6 +118,7 @@
       <object id="ReportingRepository" type="BonaStoco.Inf.Reporting.PostgresReportingRepository, BonaStoco.Inf.Reporting" singleton="false" autowire="autodetect"/>
       <object id="AccountRepository" type="Global.Repository.AccountRepository, Global.Repository" singleton="false" autowire="autodetect" />
       <object id="CustomerRepository" type="Global.Repository.CustomerRepository, Global.Repository" singleton="false" autowire="autodetect" />
+      <object id="ItemRepository" type="Global.Repository.ItemRepository, Global.Repository" singleton="false" autowire="autodetect" />
     </objects>
   </spring>
 </configuration>
