--- a/Global.Penyewaan.Domain/Global.Penyewaan.Domain.csproj
+++ b/Global.Penyewaan.Domain/Global.Penyewaan.Domain.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6F9C86D7-D421-46C8-8870-19754BA09AF3}</ProjectGuid>
+    <ProjectGuid>{565A981A-743E-4D93-A3BE-FB3D4FD084A1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Global.Repository</RootNamespace>
-    <AssemblyName>Global.Repository</AssemblyName>
+    <RootNamespace>Global.Penyewaan.Domain</RootNamespace>
+    <AssemblyName>Global.Penyewaan.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -52,6 +52,9 @@
     <Reference Include="Common.Logging">
       <HintPath>..\packages\spring-amqp\Common.Logging.dll</HintPath>
     </Reference>
+    <Reference Include="Mono.Security">
+      <HintPath>..\packages\Mono.Security.dll</HintPath>
+    </Reference>
     <Reference Include="Npgsql">
       <HintPath>..\packages\Npgsql.dll</HintPath>
     </Reference>
@@ -73,17 +76,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="interface\IItemRepository.cs" />
-    <Compile Include="interface\ICustomerRepository.cs" />
-    <Compile Include="models\Rental.cs" />
-    <Compile Include="repositories\ItemRepository.cs" />
-    <Compile Include="models\Item.cs" />
-    <Compile Include="repositories\CustomerRepository.cs" />
-    <Compile Include="models\Account.cs" />
-    <Compile Include="models\Customer.cs" />
+    <Compile Include="PenyewaanDomain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="repositories\AccountRepository.cs" />
-    <Compile Include="interface\IAccountRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Global.Repository\Global.Repository.csproj">
+      <Project>{6F9C86D7-D421-46C8-8870-19754BA09AF3}</Project>
+      <Name>Global.Repository</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
