add detail penyewaan

--- a/Global/Web.config
+++ b/Global/Web.config
@@ -119,6 +119,7 @@
       <object id="AccountRepository" type="Global.Repository.AccountRepository, Global.Repository" singleton="false" autowire="autodetect" />
       <object id="CustomerRepository" type="Global.Repository.CustomerRepository, Global.Repository" singleton="false" autowire="autodetect" />
       <object id="ItemRepository" type="Global.Repository.ItemRepository, Global.Repository" singleton="false" autowire="autodetect" />
+      <object id="RentalReportingRepository" type="Global.ReportingRepository.RentalReportingRepository, Global.ReportingRepository" singleton="false" autowire="autodetect" />
     </objects>
   </spring>
 </configuration>
