--- a/Global/Web.config
+++ b/Global/Web.config
@@ -108,6 +108,7 @@
       <object id="CustomerRepository" type="Global.Repository.CustomerRepository, Global.Repository" singleton="false" autowire="autodetect" />
       <object id="ItemRepository" type="Global.Repository.ItemRepository, Global.Repository" singleton="false" autowire="autodetect" />
       <object id="PenyewaanDomain" type="Global.Penyewaan.Domain.PenyewaanDomain, Global.Penyewaan.Domain" singleton="false" autowire="autodetect" />
+      <object id="Outstanding" type="Global.Outstanding.RentalOutstandingHandler, Global.Outstanding" singleton="false" autowire="autodetect" />
     </objects>
   </spring>
 </configuration>
