--- a/Global.ReportingRepository/Global.ReportingRepository.csproj
+++ b/Global.ReportingRepository/Global.ReportingRepository.csproj
@@ -67,6 +67,7 @@
     <Compile Include="interface\IRentalReportingRepository.cs" />
     <Compile Include="model\RentalHeader.cs" />
     <Compile Include="model\RentalItem.cs" />
+    <Compile Include="model\RentalListViewReport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="repository\RentalReportingRepository.cs" />
   </ItemGroup>
