--- a/Global/Global.csproj
+++ b/Global/Global.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
+    <Compile Include="Controllers\PenerimaanController.cs" />
     <Compile Include="Controllers\PenyewaanController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -119,6 +120,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\customer\list.css" />
     <Content Include="Content\item\list.css" />
+    <Content Include="Content\penerimaan\add.css" />
+    <Content Include="Content\penerimaan\addItem.css" />
     <Content Include="Content\penyewaan\add.css" />
     <Content Include="Content\penyewaan\addItem.css" />
     <Content Include="Content\penyewaan\detail.css" />
@@ -167,6 +170,7 @@
     <Content Include="Content\jquery-ui\images\ui-icons_fadc7a_256x240.png" />
     <Content Include="Content\jquery-ui\images\ui-icons_ffe180_256x240.png" />
     <Content Include="Scripts\CurrencyRounding.js" />
+    <Content Include="Scripts\FormatDateTime.js" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
     <Content Include="Scripts\jquery-1.5.1.min.js" />
@@ -178,6 +182,8 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
+    <Content Include="Scripts\penerimaan\penerimaanItem.js" />
+    <Content Include="Scripts\penerimaan\penerimaan.js" />
     <Content Include="Scripts\penyewaan\addItem.js" />
     <Content Include="Scripts\penyewaan\selectCustomer.js" />
     <Content Include="Scripts\penyewaan\penyewaan.js" />
@@ -268,6 +274,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Penyewaan\DetailPenyewaan.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Penerimaan\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Penerimaan\AddPenerimaan.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
