--- a/Global.Repository/Global.Repository.csproj
+++ b/Global.Repository/Global.Repository.csproj
@@ -75,8 +75,9 @@
   <ItemGroup>
     <Compile Include="interface\IItemRepository.cs" />
     <Compile Include="interface\ICustomerRepository.cs" />
+    <Compile Include="interface\IRentalRepository.cs" />
     <Compile Include="models\Rental.cs" />
-    <Compile Include="models\RentalListViewReport.cs" />
+    <Compile Include="models\RentalStatus.cs" />
     <Compile Include="repositories\ItemRepository.cs" />
     <Compile Include="models\Item.cs" />
     <Compile Include="repositories\CustomerRepository.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="repositories\AccountRepository.cs" />
     <Compile Include="interface\IAccountRepository.cs" />
+    <Compile Include="repositories\RentalRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
