--- a/Global/Web.config
+++ b/Global/Web.config
@@ -104,6 +104,8 @@
       <object id="QueryObjectMapper" type="BonaStoco.Inf.DataMapper.Impl.QueryObjectMapper, BonaStoco.Inf.DataMapper.Impl" singleton="false" autowire="autodetect" />
       <object id="QueryExecutor" type="BonaStoco.Inf.DataMapper.Impl.AdoQueryExecutor, BonaStoco.Inf.DataMapper.Impl" singleton="false" autowire="autodetect" />
       <object id="ReportingRepository" type="BonaStoco.Inf.Reporting.PostgresReportingRepository, BonaStoco.Inf.Reporting" singleton="false" autowire="autodetect" />
+
+      <object id="RentRepository" type="Global.Repository.RentalRepository, Global.Repository" singleton="false" autowire="autodetect" />
       <object id="AccountRepository" type="Global.Repository.AccountRepository, Global.Repository" singleton="false" autowire="autodetect" />
       <object id="CustomerRepository" type="Global.Repository.CustomerRepository, Global.Repository" singleton="false" autowire="autodetect" />
       <object id="ItemRepository" type="Global.Repository.ItemRepository, Global.Repository" singleton="false" autowire="autodetect" />
@@ -111,6 +113,7 @@
       <object id="Outstanding" type="Global.Outstanding.RentalOutstandingHandler, Global.Outstanding" singleton="false" autowire="autodetect" />
       <object id="CustomerOutstanding" type="Global.Outstanding.CustomerOutstandingHandler, Global.Outstanding" singleton="false" autowire="autodetect" />
       <object id="RentalReportingRepository" type="Global.ReportingRepository.RentalReportingRepository, Global.ReportingRepository" singleton="false" autowire="autodetect" />
+      
     </objects>
   </spring>
 </configuration>
