--- a/Global/Web.config
+++ b/Global/Web.config
@@ -113,6 +113,8 @@
       <object id="Outstanding" type="Global.Outstanding.RentalOutstandingHandler, Global.Outstanding" singleton="false" autowire="autodetect" />
       <object id="CustomerOutstanding" type="Global.Outstanding.CustomerOutstandingHandler, Global.Outstanding" singleton="false" autowire="autodetect" />
       <object id="RentalReportingRepository" type="Global.ReportingRepository.RentalReportingRepository, Global.ReportingRepository" singleton="false" autowire="autodetect" />
+      <object id="PenerimaanDomain" type="Global.Penerimaan.Domain.PenerimaanDomain, Global.Penerimaan.Domain" singleton="false" autowire="autodetect" />
+      <object id="ReceiveReportingRepository" type="Global.ReportingRepository.ReceiveReportingRepository, Global.ReportingRepository" singleton="false" autowire="autodetect" />
       
     </objects>
   </spring>
