--- a/Global.ReportingRepository/Global.ReportingRepository.csproj
+++ b/Global.ReportingRepository/Global.ReportingRepository.csproj
@@ -64,11 +64,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="interface\IReceiveReportingRepository.cs" />
     <Compile Include="interface\IRentalReportingRepository.cs" />
+    <Compile Include="model\ReceiveListViewReport.cs" />
     <Compile Include="model\RentalHeader.cs" />
     <Compile Include="model\RentalItem.cs" />
     <Compile Include="model\RentalListViewReport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="repository\ReceiveReportingRepository.cs" />
     <Compile Include="repository\RentalReportingRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
