--- a/Global.ReportingRepository/Global.ReportingRepository.csproj
+++ b/Global.ReportingRepository/Global.ReportingRepository.csproj
@@ -72,6 +72,7 @@
     <Compile Include="model\RentalHeader.cs" />
     <Compile Include="model\RentalItem.cs" />
     <Compile Include="model\RentalListViewReport.cs" />
+    <Compile Include="model\SalesMonitoring.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="repository\ReceiveReportingRepository.cs" />
     <Compile Include="repository\RentalReportingRepository.cs" />
